fix buttons z-index

--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ body {
   grid-column: 2/3;
   margin-top: 60px;
   position: relative;
-  z-index: 5;
+  z-index: 1;
 }
 
 #death-himself {
   background-image: url(../data/demon-idle.gif);
-  z-index: 7;
+  z-index: 3;
   height: 500px;
   width: 600px;
   background-size: cover;
@@ -53,6 +53,7 @@ body {
   bottom: 0;
   margin-right: 100px;
   margin-bottom: 10px;
+  z-index: 7;
 }
 
 #option2 {
@@ -60,12 +61,14 @@ body {
   bottom: 0;
   margin-left: 100px;
   margin-bottom: 10px;
+  z-index: 7;
 }
 
 #continue-button {
   position: absolute;
   bottom: 0;
   margin-bottom: 10px;
+  z-index: 7;
 }
 
 footer {
